2010-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/xnu.c (grub_cmd_xnu_kext): Abort if no kernel
	is loaded
	(grub_cmd_xnu_kextdir): Likewise.
	(grub_cmd_xnu_splash): Likewise.

2010-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid using Reed-Solomon with 0 redundancy.

	* grub-core/kern/i386/pc/startup.S: Remove 0-data check.
	* grub-core/lib/reed_solomon.c (decode_block): Do not proceed on 0 data
	or 0 redundancy.
	(grub_reed_solomon_add_redundancy): Do not proceed with 0 redundancy.
	(grub_reed_solomon_recover): Likewise.

2010-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't use disk subsystem in freebsd_boot.

	* grub-core/loader/i386/bsd.c (freebsd_bootdev): New variable.
	(freebsd_biosdev): Likewise.
	(grub_freebsd_boot): Use freebsd_bootdev and freebsd_biosdev.
	(grub_cmd_freebsd): Set freebsd_bootdev and freebsd_biosdev.

2010-12-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Handling of files of unknown size is currently limited. They can't be
	used e.g. for initrd or modules. Moreover gzip handling of not
	easily seekable files is buggy. Disable unknown file size for now. May
	be inefficient but works.

	* grub-core/io/gzio.c (test_header): Always retrieve the file size.
	* grub-core/io/xzio.c (grub_xzio_open): Likewise.

2010-12-25  Mirko Parthey <mirko.parthey@informatik.tu-chemnitz.de>

	* grub-core/boot/i386/pc/boot.S: Fix %es:%bx pointing to nowhere on
	floppy probe.

2010-12-25  Jeroen Dekkers <jeroen@dekkers.ch>

	* grub-core/disk/raid.c (insert_array): Don't add spurious members.

2010-12-25  Shea Levy <shlevy>

	* grub-core/genmod.sh.in: Use @OBJCOPY@ rather than objcopy.

2010-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/30_os-prober.in: Don't emit drivemap directive for
	Windows Server 2008.
	Reported by: Devin Giddings.

2010-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpihalt.c (grub_acpi_halt): Sleep for 1.5 before